--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,15 @@
     <title>Srećna diploma</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Čestitamo!</h1>
+    <div>
+        <h1>Čestitamo!</h1>
+    </div>
+    <div>
+        <img class="slika1" src="img/klara-edited.png" alt="Klara diplomirala!!!">
+    </div>
+
 </body>
+
 </html>
