--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
     </div>
 
     <div class="gallery">
-        <h1>Ovde neki naslov koji smislimo</h1>
+        <h1>Nekoliko sećanja sa studija</h1>
     </div>
     <div class="gallery">
-
         <div><img class="gallery-item" src="img/klara-diplomiranje-1.jpeg" alt=""></div>
         <div><img class="gallery-item" src="img/klara-diplomiranje-2.jpeg" alt=""></div>
         <div><img class="gallery-item" src="img/klara-diplomiranje-3.jpeg" alt=""></div>
@@ -53,16 +52,12 @@
         <div><img class="gallery-item" src="img/klara-diplomiranje-7.jpeg" alt=""></div>
         <div><img class="gallery-item" src="img/klara-diplomiranje-8.jpeg" alt=""></div>
         <div><img class="gallery-item" src="img/klara-diplomiranje-9.jpeg" alt=""></div>
-
-
         <div><img class="gallery-item" src="img/klara-diplomiranje-10.jpeg" alt=""></div>
         <div><img class="gallery-item" src="img/klara-diplomiranje-11.jpeg" alt=""></div>
         <div><img class="gallery-item" src="img/klara-diplomiranje-12.jpeg" alt=""></div>
         <div><img class="gallery-item" src="img/klara-diplomiranje-13.jpeg" alt=""></div>
         <div><img class="gallery-item" src="img/klara-diplomiranje-14.jpeg" alt=""></div>
-        <!-- <div><img src="img/klara-diplomiranje-15.jpeg" alt=""></div>
-        <div><img src="img/klara-diplomiranje-16.jpeg" alt=""></div>
-        <div><img src="img/klara-diplomiranje-17.jpeg" alt=""></div> -->
+        <div><img class="gallery-item" src="img/klara-diplomiranje-18.jpg" alt=""></div>
     </div>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -76,11 +71,9 @@
                 infinite: true,
                 speed: 300,
                 slidesToShow: 1,
-                adaptiveHeight: true,
-                arrows: false
+                arrows: true
             });
         });
-
     </script>
 </body>
 
