--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div><img class="gallery-item" src="img/klara-diplomiranje-12.jpeg" alt=""></div>
         <div><img class="gallery-item" src="img/klara-diplomiranje-13.jpeg" alt=""></div>
         <div><img class="gallery-item" src="img/klara-diplomiranje-14.jpeg" alt=""></div>
-        <div><img class="gallery-item" src="img/klara-diplomiranje-18.JPG" alt=""></div>
+        <div><img class="gallery-item" src="img/klara-diplomiranje-18.jpeg" alt=""></div>
     </div>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
