--- a/index.html
+++ b/index.html
@@ -24,16 +24,9 @@
         <div class="text-cestitke">
 
             <p>
-                Lorina čestitka
-                <br>Lora
-            </p>
-            <p>
-                Miličina čestitka
-                <br>Milica
-            </p>
-            <p>
-                Čestitam! Želim ti puno sreće u svemu što budeš radila!
-                <br>Aleksandra
+                Ponosne smo na tebe, jer nisi odustala, jer si se trudila i jer si uspela! Čestitamo ti na diplomiranju!
+                Želimo ti da na poslu sve vise i vise napreduješ i pokažeš im koliko vrediš! Tvoje drugarice sa
+                fakulteta Aleks, Lora i Milica❤️
             </p>
         </div>
     </div>
