--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <p>
                 Ponosne smo na tebe, jer nisi odustala, jer si se trudila i jer si uspela! Čestitamo ti na diplomiranju!
-                Želimo ti da na poslu sve vise i vise napreduješ i pokažeš im koliko vrediš! Tvoje drugarice sa
+                Želimo ti da na poslu sve više i više napreduješ i pokažeš im koliko vrediš! Tvoje drugarice sa
                 fakulteta Aleks, Lora i Milica❤️
             </p>
         </div>
