--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
             <p>
                 Ponosne smo na tebe, jer nisi odustala, jer si se trudila i jer si uspela! Čestitamo ti na diplomiranju!
-                Želimo ti da na poslu sve više i više napreduješ i pokažeš im koliko vrediš! Tvoje drugarice sa
-                fakulteta Aleks, Lora i Milica❤️
+                Želimo ti da na poslu sve više i više napreduješ i pokažeš im koliko vrediš!<br> Tvoje drugarice sa
+                fakulteta <i>Aleks, Lora i Milica</i>❤️
             </p>
         </div>
     </div>
@@ -51,6 +51,18 @@
         <div><img class="gallery-item" src="img/klara-diplomiranje-13.jpeg" alt=""></div>
         <div><img class="gallery-item" src="img/klara-diplomiranje-14.jpeg" alt=""></div>
         <div><img class="gallery-item" src="img/klara-diplomiranje-18.jpeg" alt=""></div>
+        <div><video class="gallery-item" width="480" height="400" controls>
+                <source src="img/klara-diplomiranje-15.mp4" type="video/mp4">
+            </video>
+        </div>
+        <div><video class="gallery-item" width="480" height="400" controls>
+            <source src="img/klara-diplomiranje-16.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div><video class="gallery-item" width="480" height="400" controls>
+        <source src="img/klara-diplomiranje-17.mp4" type="video/mp4">
+    </video>
+</div>
     </div>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
